--- a/lawsystem/templates/MyAdList.html
+++ b/lawsystem/templates/MyAdList.html
@@ -115,7 +115,7 @@
             MyAccount
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="/clientSettings/">Settings</a>
             <a class="dropdown-item" href="/logout/">Logout</a>
               </div>
             </li>
