--- a/lawsystem/templates/caseStatus.html
+++ b/lawsystem/templates/caseStatus.html
@@ -134,7 +134,7 @@ element.style {
             MyAccount
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="/clientSettings/">Settings</a>
             <a class="dropdown-item" href="/logout/">Logout</a>
               </div>
             </li>
@@ -216,9 +216,9 @@ element.style {
                         &nbsp;&nbsp;<em style="color:#2b2b2b;font-weight:bold;"> </em>
                     </td>
                     <td>
-                        <a style="font-weight:bold;" href="#" onclick="">
+                        <!--a style="font-weight:bold;" href="#" onclick="">
                             <em style="color:#0e9631;text-decoration:underline;">{{caseDetailsArray.13}}</em>
-                        </a>
+                        </a-->
                     </td>
                 </tr>
             </tbody>
