--- a/lawsystem/templates/home.html
+++ b/lawsystem/templates/home.html
@@ -149,7 +149,7 @@ width: 100%;
               <a class="nav-link" href="#" ><i class="fa fa-home" aria-hidden="true"></i> Home</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#"  >About</a>
+              <a class="nav-link" href="#about"  >About</a>
             </li>  
             <li class="nav-item ">
               <a class="nav-link" href="#"  >Contact</a>
@@ -233,7 +233,7 @@ width: 100%;
       <div class="rightcolumn">
       
       <div class="card "  style="border-radius: 5%;">
-      
+        <section id="about">
       <center><h2><b>About</b></h2></center>
     
     <br>
@@ -242,7 +242,7 @@ width: 100%;
         information about  your on going case(if there is any). Our ultimate goal is to give easy access to users,
         all at one place.All the details that we provide on our website are legit. And all your personal details 
         are safe with us. Happy browsing!! </p>
-      
+      </section>
       </div>
       
       
