--- a/lawsystem/templates/searchSection.html
+++ b/lawsystem/templates/searchSection.html
@@ -32,7 +32,7 @@
               <i class="fa fa-user" aria-hidden="true"></i> My Account
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Settings</a>
+              <a class="dropdown-item" href="/clientSettings/">Settings</a>
               <a class="dropdown-item" href="/logout/">Logout</a>
               
           </li>
