--- a/lawsystem/templates/MyClientList.html
+++ b/lawsystem/templates/MyClientList.html
@@ -96,7 +96,7 @@
                 <i class="fa fa-user" aria-hidden="true"></i>  My Account
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Settings</a>
+                <a class="dropdown-item" href="/advocateSettings/">Settings</a>
                 <a class="dropdown-item" href="/logout/">Logout</a>
                 
             </li>
