--- a/lawsystem/templates/project.html
+++ b/lawsystem/templates/project.html
@@ -52,7 +52,7 @@
                 My Account
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Settings</a>
+                <a class="dropdown-item" href="/clientSettings/">Settings</a>
                 <a class="dropdown-item" href="/logout/">Logout</a>
                 </div>
             </li>
